--- a/index.html
+++ b/index.html
@@ -3,9 +3,37 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./styles/reset.css" />
+    <link rel="stylesheet" href="./styles/main.css" />
     <title>Adalab</title>
   </head>
   <body>
-    Hola mundo
+    <div class="headerbox">
+      <header class="header">
+        <div class="logo">
+          <img
+            src="./images/adalab-logo-155x61.png"
+            alt="Imagen del logo de Adalab"
+          /><a href="https://adalab.es/" title="Imagen de logo de Adalab"></a>
+        </div>
+        <nav class="menu">
+          <ul>
+            <li>BLOG</li>
+            <li>CONTACTO</li>
+          </ul>
+        </nav>
+      </header>
+    </div>
+    <main class="main">
+      <h1 class="main-title">
+        <span>Creando</span>
+        <span>Diversidad</span>
+        <span>Digital</span>
+      </h1>
+    </main>
   </body>
 </html>
