--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:wght@400&display=swap"
+      rel="stylesheet"
+    />
+    <link
       href="https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap"
       rel="stylesheet"
     />
@@ -14,23 +18,25 @@
   <body>
     <header class="header">
       <div class="logo">
-        <img
-          src="./images/adalab-logo-155x61.png"
-          alt="Imagen del logo de Adalab"
-        /><a href="https://adalab.es/" title="Imagen de logo de Adalab"></a>
+        <a href="https://adalab.es/" title="Ir a la página de Adalab"
+          ><img
+            src="./images/adalab-logo-155x61.png"
+            alt="Imagen del logo de Adalab"
+            title="Imagen del logo de Adalab"
+        /></a>
       </div>
       <nav class="menu">
         <ul>
-          <li>BLOG</li>
-          <li>CONTACTO</li>
+          <li><a href="#" title="Ir a la página del blog"></a>Blog</li>
+          <li><a href="#" title="Ir a la página de contacto"></a>Contacto</li>
         </ul>
       </nav>
     </header>
     <main class="main">
       <h1 class="main-title">
         <span>Creando</span>
-        <span>Diversidad</span>
-        <span>Digital</span>
+        <span>diversidad</span>
+        <span>digital</span>
       </h1>
     </main>
   </body>
